<resources>
    <string name="app_name">Room Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movie_name">Movie Name</string>
    <string name="release_date">Release Date</string>
    <string name="director_name">Director Name</string>
    <string name="add">Add</string>
    <string name="add_actor">Add Actor</string>
    <string name="delete">delete</string>
    <string name="add_movie">Add Movie</string>
    <string name="remove">remove</string>
    <string name="role">Role</string>
    <string name="actor_name">Actor Name</string>
</resources>